--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@splidejs/react-splide": "^0.7.12",
     "@t3-oss/env-nextjs": "^0.9.2",
     "next": "^14.2.1",
     "react": "18.2.0",
